--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1 class="mb-2">Heyy!! I'm Rishikesh Esargundi</h1>
                     <p class="about-para mx-auto">A passionate Full-Stack developer Student building robust and scalable web applications.</p>
                     <div class="d-flex justify-content-center my-3">
-                        <img src="images/IMG-20250308-WA0056.jpg" class="img-responsive img-circle border border-3 border-info m-3" alt="Rishikesh Portrait" />
+                        <img src="IMG-20250308-WA0056.jpg" class="img-responsive img-circle border border-3 border-info m-3" alt="Rishikesh Portrait" />
                     </div>
                     <h3>About Me</h3>
                     <p class="about-para mx-auto">Hi, I'm Esargundi Rishikesh, a passionate developer with a strong foundation in web development. I enjoy crafting seamless digital experiences that blend functionality and aesthetics, ensuring efficiency and user engagement.</p>
